--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "pg": "^8.10.0"
   },
   "devDependencies": {
